Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="logo"><a href="#">
-                <img src="./img/Logo1.jpg" alt="Logo"></a>
+            <div class="logo"><a href="./index.html">
+                <img class = "logo__img" src="./img/Logo1.jpg" alt="Logo"></a>
             </div>
             <nav class="menu">
                 <ul class="menu__list">
@@ -26,7 +26,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -34,7 +34,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -42,7 +42,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -50,7 +50,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -58,7 +58,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -66,7 +66,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img src="./img/apps.png" alt="Apps">
+                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -74,13 +74,15 @@
                             <li class="popup__item">
                                 <input type="checkbox" class="checkbox__more" id="checkbox__more">
                                 <label for="checkbox__more" class="more__label">
-                                    <span class="btn">More</span>
+                                    <span class="btn visible">More</span>
+                                    <span class="btn hide">Less</span>
                                 </label>
+
                                 <ul class="more__list">
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img src="./img/apps.png" alt="Apps">
+                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
@@ -88,7 +90,7 @@
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img src="./img/apps.png" alt="Apps">
+                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
@@ -96,7 +98,7 @@
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img src="./img/apps.png" alt="Apps">
+                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
@@ -112,7 +114,7 @@
         </header>
         <main class="main">
             <div class="main__content">
-              <h1>Popup,hahaha!</h1>
+              <h1 class="some__text">Popup,hahaha!</h1>
             </div>
           </main>
     </div>
