--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <li class="menu__item">
                         <input type="checkbox" class="checkbox__main" id="checkbox__main">
                         <label for="checkbox__main" class="main__label">
-                            <img src="./img/popup-button.png" alt="popup-button">
+                            <img src="./img/popup-button.png" alt="">
                         </label>
                         <ul class="popup__list">
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -34,7 +34,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -42,7 +42,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -50,7 +50,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -58,7 +58,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -66,7 +66,7 @@
                             <li class="popup__item">
                                 <a href="#" class="item__link">
                                     <div class="item__view">
-                                        <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                        <img class="item__view__img" src="./img/apps.png" alt="">
                                         <p>Apps</p>
                                     </div>
                                 </a>
@@ -75,14 +75,13 @@
                                 <input type="checkbox" class="checkbox__more" id="checkbox__more">
                                 <label for="checkbox__more" class="more__label">
                                     <span class="btn visible">More</span>
-                                    <span class="btn hide">Less</span>
                                 </label>
 
                                 <ul class="more__list">
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                                <img class="item__view__img" src="./img/apps.png" alt="">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
@@ -90,7 +89,7 @@
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                                <img class="item__view__img" src="./img/apps.png" alt="">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
@@ -98,7 +97,7 @@
                                     <li class="more__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
-                                                <img class="item__view__img" src="./img/apps.png" alt="Icon Apps item">
+                                                <img class="item__view__img" src="./img/apps.png" alt="">
                                                 <p>Apps</p>
                                             </div>
                                         </a>
