--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="more__item">
+                                    <li class="more__item last__item">
                                         <a href="#" class="item__link">
                                             <div class="item__view">
                                                 <img class="item__view__img" src="./img/apps.png" alt="">
@@ -102,6 +102,7 @@
                                             </div>
                                         </a>
                                     </li>
+                                    
                                 </ul>
                             </li>
                         </ul>
